--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -1,5 +1,6 @@
 // Typography
-$base-font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+$base-font-family: "Cabin", "Helvetica Neue", Helvetica, Ubuntu, Arial, sans-serif;
+$headings-font-family: "Oswald", "Roboto Condensed", "Open Sans Condensed", "Helvetica Neue", Helvetica, Ubuntu, Arial, sans-serif;
 $base-font-size:   16px;
 $base-font-weight: 400;
 $small-font-size:  $base-font-size * 0.875;
