--- a/css/main.scss
+++ b/css/main.scss
@@ -4,6 +4,8 @@
 
 @charset "utf-8";
 
+@import 'https://fonts.googleapis.com/css?family=Cabin|Oswald';
+
 @import "variables";
 @import "media";
 @import "base";
