Add sassline-variables file for overriding default values

--- a/css/main.scss
+++ b/css/main.scss
@@ -7,5 +7,6 @@
 @import 'https://fonts.googleapis.com/css?family=Cabin|Oswald';
 
 @import "variables";
+@import "sassline-variables";
 @import "media";
 @import "base";
