--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -13,18 +13,10 @@
       </div>
 
       <div class="footer-col footer-col-2">
+          @siriniok:
         <ul class="social-media-list">
-          {% if site.github_username %}
-          <li>
-            {% include icon-github.html username=site.github_username %}
-          </li>
-          {% endif %}
-
-          {% if site.twitter_username %}
-          <li>
-            {% include icon-twitter.html username=site.twitter_username %}
-          </li>
-          {% endif %}
+          <li><a href="site.github_username">Github</a></li>
+          <li><a href="site.twitter_username">Twitter</a></li>
         </ul>
       </div>
 
