--- a/_sass/blog/util/_syntax-highlighting.scss
+++ b/_sass/blog/util/_syntax-highlighting.scss
@@ -1,6 +1,11 @@
 /**
  * Syntax highlighting styles
  */
+
+%vertical-rhythm {
+    margin-bottom: $spacing-unit / 2;
+}
+
 .highlight {
     background: #fff;
     @extend %vertical-rhythm;
