--- a/_sass/_sassline-variables.scss
+++ b/_sass/_sassline-variables.scss
@@ -58,19 +58,19 @@ $gutterwidths: (
 // Add weight and style details too.
 // ! Set cap height to set to the baseline.
 $bodytype: (
-  font-family: 'Georgia, serif',
+  font-family: 'Cabin, "Helvetica Neue", Helvetica, serif',
   regular: 400,
   bold: 700,
   italic: italic,
   cap-height: 0.66
-) !default;
+);
 
 $headingtype: (
-  font-family: 'Helvetica, sans-serif',
+  font-family: 'Oswald, "Helvetica Neue", Helvetica, sans-serif',
   regular: 400,
   bold: 700,
   cap-height: 0.66
-) !default;
+);
 
 $monospacetype: (
   font-family: 'Menlo, monospace',
