Update default layout

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -7,11 +7,13 @@
 
     {% include header.html %}
 
-    <div class="page-content">
-      <div class="wrapper">
-        {{ content }}
+    <section id="personal-site">
+      <div class="section typeset">
+        <div class="single">
+          {{ content }}
+        </div>
       </div>
-    </div>
+    </section>
 
     {% include footer.html %}
 
