--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -1,6 +1,6 @@
 @import "blog/util/syntax-highlighting";
 
-// @import "vendor/sassline/style"
+@import "vendor/sassline/style";
 
 @import "blog/base";
 @import "blog/layout";
