feat: change the site footer notes

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,9 +1,8 @@
 <footer class="global-footer">
 
   <p>
-    © {{ site.time | date: '%Y' }}
-    <a href="{{ site.baseurl }}">VLADYSLAV SIRINIOK</a>
-    All rights reserved.
+    This blog is uncopyrighted by its author
+    <a href="{{ site.baseurl }}">Vladyslav Siriniok</a>
   </p>
 
 </footer>
