feat: change monospace font-family

--- a/_sass/_sassline-variables.scss
+++ b/_sass/_sassline-variables.scss
@@ -73,7 +73,7 @@ $headingtype: (
 );
 
 $monospacetype: (
-  font-family: 'Menlo, monospace',
+  font-family: 'Consolas, "Liberation Mono", Menlo, Courier, monospace',
   regular: 400,
   cap-height: 0.68
 ) !default;
