--- a/_sass/_sassline-variables.scss
+++ b/_sass/_sassline-variables.scss
@@ -76,7 +76,7 @@ $monospacetype: (
   font-family: 'Consolas, "Liberation Mono", Menlo, Courier, monospace',
   regular: 400,
   cap-height: 0.68
-) !default;
+);
 
 // Here are some local fonts cap-height sizes to get you started:
 // Georgia: 0.66, Times / Times New Roman: 0.65, Palatino: 0.52
