--- a/css/main.scss
+++ b/css/main.scss
@@ -4,7 +4,7 @@
 
 @charset "utf-8";
 
-@import 'https://fonts.googleapis.com/css?family=Cabin|Oswald';
+@import 'https://fonts.googleapis.com/css?family=Cabin:400,400i,700,700i|Oswald:400,700';
 
 @import "variables";
 @import "sassline-variables";
