--- a/_sass/_sassline-variables.scss
+++ b/_sass/_sassline-variables.scss
@@ -21,9 +21,9 @@ $rootsizes: (
   rootsize-0: 12,   // 24px line-height body text
   rootsize-1: 14,   // 28px line-height body text
   rootsize-2: 15,   // 30px line-height body text
-  rootsize-3: 17,   // 34px line-height body text
-  rootsize-4: 19    // 38px line-height body text
-) !default;
+  rootsize-3: 16,   // 32px line-height body text
+  rootsize-4: 17    // 34px line-height body text
+);
 
 // Set the optimum line-length for your text (based on typeface).
 // Aim for 75–100 characters a line when possible, at smaller sizes type size is more important.
