feat: replace highlighting scheme w/ Solarized Dark

--- a/_sass/_sassline-variables.scss
+++ b/_sass/_sassline-variables.scss
@@ -95,4 +95,4 @@ $white: #FFFFFF !default;
 
 // Background colours.
 $backgroundColour: #FCFCFC !default;
-$codeBackgroundColour: #F5F4F2 !default;
+$codeBackgroundColour: #002b36 !default;
