--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,7 +1,7 @@
 <header class="global-header">
-  <h1 class="global-header__logo">
+  <span class="global-header__logo">
     <a href="{{ site.baseurl }}">{{ site.title }}</a>
-  </h1>
+  </span>
 
   <nav class="main-nav">
     <ul class="main-nav__list">
