refactor: refactor layouts

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -7,12 +7,8 @@
 
     {% include header.html %}
 
-    <section id="baseline"> <!-- class="show-grid" -->
-      <div class="section typeset">
-        <div class="single">
-          {{ content }}
-        </div>
-      </div>
+    <section id="baseline">
+      {{ content }}
     </section>
 
     {% include footer.html %}
