fix: fix using measures in layouts

--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -2,7 +2,7 @@
 layout: default
 ---
 <div class="section typeset">
-  <div class="single">
+  <div class="single-measure">
     <article class="post">
 
       <header class="post-header">
