--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -2,7 +2,7 @@
 layout: default
 ---
 <div class="section typeset">
-  <div class="single">
+  <div class="single-measure">
     <article class="post" itemscope itemtype="http://schema.org/BlogPosting">
 
       <header class="post-header">
