--- a/_includes/head.html
+++ b/_includes/head.html
@@ -4,7 +4,13 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <base href="/">
 
-  <title>{% if page.title %}{{ page.title | escape }}{% else %}{{ site.title | escape }}{% endif %}</title>
+  <title>
+    {% if page.title %}
+      {{ page.title | append: ' - ' | append: site.title | escape }}
+    {% else %}
+      {{ site.title | append: ' - The blog of Vladyslav Siriniok' | escape }}
+    {% endif %}
+  </title>
   <meta name="description" content="{% if page.excerpt %}{{ page.excerpt | strip_html | strip_newlines | truncate: 160 }}{% else %}{{ site.description }}{% endif %}">
 
   <link rel="stylesheet" href="{{ "/css/main.css" | prepend: site.baseurl }}">
