feat: add Disqus comments

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -15,5 +15,9 @@ layout: default
       </div>
 
     </article>
+
+    <div id="article-comments">
+      {% include comments.html %}
+    </div>
   </div>
 </div>
