Change background color

--- a/_sass/_sassline-variables.scss
+++ b/_sass/_sassline-variables.scss
@@ -95,5 +95,5 @@ $white: #FFFFFF !default;
 $green: #1abb9c;
 
 // Background colours.
-$backgroundColour: #faf8f6;
+$backgroundColour: #fff;
 $codeBackgroundColour: #002b36;
