--- a/_includes/header.html
+++ b/_includes/header.html
@@ -5,15 +5,17 @@
 
   <nav class="main-nav">
     <ul class="main-nav__list">
-      {% for my_page in site.pages %}
-        {% if my_page.title %}
-          <li>
-            <a href="{{ my_page.url | prepend: site.baseurl }}">
-              {{ my_page.title }}
-            </a>
-          </li>
-        {% endif %}
-      {% endfor %}
+      <li>
+        <a href="{{ 'learning/2017/05/01/mit-challenge.html' | prepend: site.baseurl }}">
+          MIT
+        </a>
+      </li>
+
+      <li>
+        <a href="{{ 'articles' | prepend: site.baseurl }}">
+          Articles
+        </a>
+      </li>
     </ul>
   </nav>
 </header>
