Update global-header and global-footer design

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,8 +1,5 @@
 <footer class="global-footer">
-
   <p>
-    This blog is uncopyrighted by its author
-    <a href="{{ site.baseurl }}">Vladyslav Siriniok</a>
+    &copy; 2016-2019 <a href="{{ site.baseurl }}">Vladyslav Siriniok</a>
   </p>
-
 </footer>
