--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -5,3 +5,7 @@
 @import "blog/base";
 @import "blog/layout";
 @import "blog/index";
+
+@import "blog/components/global-header";
+@import "blog/components/main-nav";
+@import "blog/components/global-footer";
