--- a/_sass/_sassline-variables.scss
+++ b/_sass/_sassline-variables.scss
@@ -86,10 +86,10 @@ $monospacetype: (
 // Proxima Nova: 0.57, Museo Slab: 0.66, JAF Facit: 0.7, Brandon Grotesque: 0.65, Clavo: 0.7, Adelle: 0.66, FF Tisa Pro: 0.82, Jubilat: 0.66, Futura PT: 0.66, Chaparral Pro: 0.5, Minion Pro: 0.66, Myriad Pro: 0.66, Adobe Caslon Pro: 0.36
 
 // Text colours. British English.
-$headingColour: #df5844;
+$headingColour: #ca2410; // df5844
 $bodyColour: #282828;
-$linkColour: #09c;
-$hoverColour: #0478b3;
+$linkColour: #2657ce; // 09c
+$hoverColour: #09339a; // 0478b3
 $captionColour: #ada9a9;
 $white: #FFFFFF !default;
 $green: #1abb9c;
