--- a/_sass/blog/_layout.scss
+++ b/_sass/blog/_layout.scss
@@ -1,102 +1,34 @@
-/**
- * Clearfix
- */
-%clearfix {
-  &:after {
-    content: "";
-    display: table;
-    clear: both;
-  }
+body {
+  background-color: $backgroundColour;
+  color: $bodyColour;
+  overflow-x: hidden;
 }
 
+.section {
+  padding: 2rem 0;
 
-
-/**
- * Site header
- */
-$logoWidth: 300px;
-
-.global-header {
-  .global-header__logo {
-    background-image: url(../../assets/logo.svg);
-    background-repeat: no-repeat;
-    background-size: 32px;
-    height: 32px;
-    margin: 2.5rem 0 2.5rem 3%;
-    width: $logoWidth;
-
-    @include breakpoint(break-3) {
-      background-size: 37px;
-      height: 37px;
-      margin-left: 5rem;
-    }
-
-    a {
-      @include fontsize(beta, all);
-
-      font-family: unquote(map-get($headingtype, font-family));
-      font-weight: map-get($headingtype, bold);
-      padding-left: 43px;
-      line-height: 1.27;
-
-      @include breakpoint(break-3) {
-        @include fontsize(gamma, all);
-
-        padding-left: 55px;
-        line-height: 1.3;
-      }
-    }
-  }
-}
-
-
-
-/**
- * Site navigation
- */
-.main-nav {
   @include breakpoint(break-1) {
-    width: calc(100% - #{$logoWidth} - 3%);
+    padding: 3rem 0;
   }
 
-  @include breakpoint(break-3) {
-    width: calc(100% - #{$logoWidth} - 5rem);
-  }
-
-  li {
-    @include fontsize(theta, all);
-  }
-
-  li:last-child {
-    margin-right: 3%;
-
-    @include breakpoint(break-3) {
-      margin-right: 5rem;
-    }
+  @include breakpoint(break-2) {
+    padding: 4rem 0;
   }
 }
 
-.js {
-  .nav-toggle {
-    top: 2.6rem;
+img {
+  -ms-interpolation-mode: bicubic;
+  height: auto;
+  vertical-align: middle;
+  width: 100%;
 
-    &:after {
-      background-image: url(../../assets/menu.svg);
-    }
+  @include breakpoint(break-1) {
+    margin: 0 auto;
+    max-width: 100%;
+    width: auto;
   }
 }
 
-
-
-/**
- * Site footer
- */
-.global-footer {
-  border-top: 1px solid $captionColour;
-
-  p {
-    @include fontsize(theta, all);
-
-    font-family: unquote(map-get($bodytype, font-family));
-  }
+.button-align {
+  @include baseline(zeta, $bodytype, 2, 2, all);
 }
