--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -5,13 +5,13 @@
 
   <body>
 
-    {% include header.html %}
+    {% include global-header.html %}
 
     <section id="baseline">
       {{ content }}
     </section>
 
-    {% include footer.html %}
+    {% include global-footer.html %}
 
     <script>
       (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
