--- a/_includes/head.html
+++ b/_includes/head.html
@@ -8,9 +8,10 @@
     {% if page.title %}
       {{ page.title | append: ' - ' | append: site.title | escape }}
     {% else %}
-      {{ site.title | append: ' - The blog of Vladyslav Siriniok' | escape }}
+      The blog of Vladyslav Siriniok
     {% endif %}
   </title>
+
   <meta name="description" content="{% if page.excerpt %}{{ page.excerpt | strip_html | strip_newlines | truncate: 160 }}{% else %}{{ site.description }}{% endif %}">
 
   <link rel="stylesheet" href="{{ "/css/main.css" | prepend: site.baseurl }}">
