--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -4,20 +4,26 @@ layout: default
 <div class="section typeset">
   <div class="single-measure">
     <article class="post" itemscope itemtype="http://schema.org/BlogPosting">
-
       <header class="post-header">
         <h1 class="post-title" itemprop="name headline">{{ page.title }}</h1>
-        <p class="post-meta"><time datetime="{{ page.date | date_to_xmlschema }}" itemprop="datePublished">{{ page.date | date: "%b %-d, %Y" }}</time>{% if page.author %} • <span itemprop="author" itemscope itemtype="http://schema.org/Person"><span itemprop="name">{{ page.author }}</span></span>{% endif %}</p>
+        <p class="post-meta">
+          <time datetime="{{ page.date | date_to_xmlschema }}" itemprop="datePublished">{{ page.date | date: "%b %-d, %Y" }}</time>
+          {% if page.author %}
+            •
+            <span itemprop="author" itemscope itemtype="http://schema.org/Person">
+              <span itemprop="name">{{ page.author }}</span>
+            </span>
+          {% endif %}
+        </p>
       </header>
 
       <div class="post-content" itemprop="articleBody">
         {{ content }}
       </div>
-
     </article>
 
-    <div id="article-comments">
+    <article class="article-comments">
       {% include comments.html %}
-    </div>
+    </article>
   </div>
 </div>
