--- a/_sass/_sassline-variables.scss
+++ b/_sass/_sassline-variables.scss
@@ -90,7 +90,7 @@ $headingColour: #ca2410; // df5844
 $bodyColour: #282828;
 $linkColour: #2657ce; // 09c
 $hoverColour: #09339a; // 0478b3
-$captionColour: #ada9a9;
+$captionColour: #888484;
 $white: #FFFFFF !default;
 $green: #1abb9c;
 
