Fix link target

--- a/_includes/global-footer.html
+++ b/_includes/global-footer.html
@@ -5,7 +5,7 @@
     <a href="https://github.com/siriniok" target="_blank">Github</a> ·
     <a href="mailto:siriniok@gmail.com" target="_blank">💌 Contact Me</a> ·
 
-    Subscribe via <a href="{{ "/feed.xml" | prepend: site.baseurl | prepend: site.url }}"  rel="alternate" type="application/rss+xml" title="{{ site.title }}">RSS</a>
+    Subscribe via <a href="{{ "/feed.xml" | prepend: site.baseurl | prepend: site.url }}"  rel="alternate" type="application/rss+xml" title="{{ site.title }}" target="_blank">RSS</a>
   </p>
   <p>
     &copy; 2016-2019 <a href="{{ site.baseurl }}">Vladyslav Siriniok</a>
