Pre-relize fixes

--- a/_includes/profile.html
+++ b/_includes/profile.html
@@ -8,7 +8,7 @@
   <div class="single-measure">
     <h1>Welcome!</h1>
     <p>
-      My name is <a href="https://ua.linkedin.com/in/siriniok" target="_blank">Vladyslav Siriniok,</a> I'm an entrepreneur and a product engineer from Kharkiv, Ukraine. I help software developers grow at <a href="https://mtdv.io">Metadevelopment</a> 🚀.
+      My name is <a href="https://ua.linkedin.com/in/siriniok" target="_blank">Vladyslav Siriniok,</a> I'm an entrepreneur and a product engineer from Kharkiv, Ukraine. I help software developers grow at <a href="https://mtdv.io" target="_blank">Metadevelopment</a> 🚀.
       <br>
       This is <a href="{{ site.baseurl }}/articles">my blog</a> about tech, science, and life.
     </p>
@@ -19,7 +19,7 @@
       and view my
       <a href="https://github.com/siriniok" target="_blank">Github profile</a>,
       or
-      <a href="mailto:siriniok@gmail.com" target="_blank">drop me a line 💌</a>.
+      <a href="mailto:siriniok@gmail.com" target="_blank">drop me a line</a> 💌.
     </p>
   </div>
 </section>
