--- a/_includes/showcase.html
+++ b/_includes/showcase.html
@@ -1,4 +1,4 @@
-<section class="showcase typeset">
+<section class="showcase section typeset">
   <div class="single-measure">
     <h3 class="showcase-title">Check Out My Writings:</h3>
     <ul class="post-list">
