--- a/_includes/global-footer.html
+++ b/_includes/global-footer.html
@@ -2,7 +2,8 @@
   <p>
     <a href="https://twitter.com/siriniok" target="_blank">Twitter</a> ·
     <a href="https://facebook.com/siriniok" target="_blank">Facebook</a> ·
-    <a href="https://github.com/siriniok" target="_blank">Github</a> ·
+    <a href="https://github.com/siriniok" target="_blank">Github</a>
+    <br>
     <a href="mailto:siriniok@gmail.com" target="_blank">💌 Contact Me</a> ·
 
     Subscribe via <a href="{{ "/feed.xml" | prepend: site.baseurl | prepend: site.url }}"  rel="alternate" type="application/rss+xml" title="{{ site.title }}" target="_blank">RSS</a>
