--- a/_includes/head.html
+++ b/_includes/head.html
@@ -18,4 +18,6 @@
   <link rel="canonical" href="{{ page.url | replace:'index.html','' | prepend: site.baseurl | prepend: site.url }}">
   <link rel="alternate" type="application/rss+xml" title="{{ site.title }}" href="{{ "/feed.xml" | prepend: site.baseurl | prepend: site.url }}">
   <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+
+  {% seo %}
 </head>
