--- a/_sass/blog/_base.scss
+++ b/_sass/blog/_base.scss
@@ -18,6 +18,18 @@ sup {
 }
 
 .section {
+  padding: 2rem 0;
+
+  @include breakpoint(break-1) {
+    padding: 3rem 0;
+  }
+
+  @include breakpoint(break-2) {
+    padding: 4rem 0;
+  }
+}
+
+.post-section {
   padding: 1.5 0;
 
   @include breakpoint(break-1) {
