Add about me section

--- a/_includes/profile.html
+++ b/_includes/profile.html
@@ -2,13 +2,13 @@
   <div class="single-measure">
     <div class="profile-photo">
       <img class="profile-photo"
-      src="assets/me.jpg" alt="Vladyslav Siriniok" title="Vladyslav Siriniok">
+      src="/assets/me.jpg" alt="Vladyslav Siriniok" title="Vladyslav Siriniok">
     </div>
   </div>
   <div class="single-measure">
     <h1>Welcome!</h1>
     <p>
-      My name is <a href="https://ua.linkedin.com/in/siriniok" target="_blank">Vladyslav Siriniok,</a> I'm an entrepreneur and a product engineer from Kharkiv, Ukraine. I help software developers grow at <a href="https://mtdv.io" target="_blank">Metadevelopment</a> 🚀.
+      My name is <a href="https://ua.linkedin.com/in/siriniok" target="_blank">Vladyslav Siriniok</a>, I'm an entrepreneur and a product engineer from Kharkiv, Ukraine. I help software developers grow at <a href="https://mtdv.io" target="_blank">Metadevelopment</a> 🚀.
       <br>
       This is <a href="{{ site.baseurl }}/articles">my blog</a> about tech, science, and life.
     </p>
