--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -22,6 +22,8 @@ layout: default
       </div>
     </article>
 
+    {% include post-profile.html %}
+
     <article class="article-comments">
       {% include comments.html %}
     </article>
