--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -8,4 +8,5 @@
 @import "blog/components/main-nav";
 @import "blog/components/global-footer";
 @import "blog/components/profile";
+@import "blog/components/post-profile";
 @import "blog/components/showcase";
