Remove base url

--- a/_includes/global-header.html
+++ b/_includes/global-header.html
@@ -1,6 +1,6 @@
 <header class="global-header">
   <section class="global-header__title">
-    <a class="site-title" href="{{ site.baseurl }}" title="{{ site.description }}">{{ site.title }}</a>
+    <a class="site-title" href="{{ site.url }}" title="{{ site.description }}">{{ site.title }}</a>
   </section>
 
   <section class="global-header__nav">
