--- a/_includes/profile.html
+++ b/_includes/profile.html
@@ -19,7 +19,7 @@
       and view my
       <a href="https://github.com/siriniok" target="_blank">Github profile</a>,
       or
-      <a href="mailto:siriniok@gmail.com" target="_blank">drop me a line</a> 💌.
+      <a href="mailto:{{site.email}}" target="_blank">drop me a line</a> 💌.
     </p>
   </div>
 </section>
