--- a/_includes/post-profile.html
+++ b/_includes/post-profile.html
@@ -12,7 +12,7 @@
       <a href="https://twitter.com/siriniok" target="_blank">Twitter</a> ·
       <a href="https://facebook.com/siriniok" target="_blank">Facebook</a> ·
       <a href="https://github.com/siriniok" target="_blank">Github</a> ·
-      <a href="mailto:siriniok@gmail.com" target="_blank">💌 Contact Me</a>
+      <a href="mailto:{{ site.email }}" target="_blank">💌 Contact Me</a>
     </p>
   </article>
 </section>
