--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -14,6 +14,9 @@ layout: default
               <span itemprop="name">{{ page.author }}</span>
             </span>
           {% endif %}
+          {% if page.read %}
+            • <span>{{ page.read }}</span>
+          {% endif %}
         </p>
       </header>
 
