Add subscription form

--- a/_includes/showcase.html
+++ b/_includes/showcase.html
@@ -1,17 +1,16 @@
-<section class="showcase section typeset">
-  <div class="single-measure">
-    <h3 class="showcase-title">Check Out My Writings:</h3>
-    <ul class="post-list">
-      {% for post in site.posts limit:10 %}
-        <li>
-          <h3>
-            <a class="post-link" href="{{ post.url | prepend: site.baseurl }}">{{ post.title }}</a>
-          </h3>
-        </li>
-      {% endfor %}
-    </ul>
+<section class="showcase">
+  <h2 class="showcase-title">Check Out My Writings:</h2>
+  <ul class="post-list">
+    {% for post in site.posts limit:10 %}
+      <li>
+        <h3>
+          <a class="post-link" href="{{ post.url | prepend: site.baseurl }}">{{ post.title }}</a>
+        </h3>
+      </li>
+    {% endfor %}
+  </ul>
 
-    <p>
-      <a href="{{ site.baseurl }}/articles">View All</a>
-    </p>
+  <p>
+    <a href="{{ site.baseurl }}/articles">View All</a>
+  </p>
 </section>
