--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -26,6 +26,7 @@ layout: default
     </article>
 
     {% include post-profile.html %}
+    {% include subscription-form.html %}
 
     <article class="article-comments">
       {% include comments.html %}
