--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -9,4 +9,5 @@
 @import "blog/components/global-footer";
 @import "blog/components/profile";
 @import "blog/components/post-profile";
+@import "blog/components/subscription-form";
 @import "blog/components/showcase";
