--- a/_includes/profile.html
+++ b/_includes/profile.html
@@ -8,8 +8,7 @@
   <div class="single-measure">
     <h1>Welcome!</h1>
     <p>
-      My name is <a href="https://ua.linkedin.com/in/siriniok" target="_blank">Vladyslav Siriniok</a>, I'm an entrepreneur and a product engineer from Kharkiv, Ukraine. I help software developers grow at <a href="https://mtdv.io" target="_blank">Metadevelopment</a> 🚀.
-      <br>
+      My name is <a href="https://ua.linkedin.com/in/siriniok" target="_blank">Vladyslav Siriniok</a>, I'm an entrepreneur, product engineer, and aspiring AI researcher from Kharkiv, Ukraine. Ex-CPO at <a href="https://metadevelopment.io/">Metadevelopment</a>.<br>
       This is <a href="{{ site.baseurl }}/articles">my blog</a> about tech, science, and life.
     </p>
     <p>
