Add the subscribe button to the main menu

--- a/_includes/subscription-form.html
+++ b/_includes/subscription-form.html
@@ -1,4 +1,4 @@
-<div class="section post-section typeset">
+<div class="section post-section typeset" id="subscribe">
   <div class="single-measure">
     <div class="subscription-form">
       <h2 class="subscription-form-title">Subscribe for Updates!</h2>
