Improve the profile design

--- a/_includes/profile.html
+++ b/_includes/profile.html
@@ -8,8 +8,7 @@
   <div class="single-measure">
     <h1>Welcome!</h1>
     <p>
-      My name is <a href="https://ua.linkedin.com/in/siriniok" target="_blank">Vladyslav Siriniok</a>, I'm an entrepreneur, product engineer, and aspiring AI researcher from Kharkiv, Ukraine. Ex-CPO at <a href="https://metadevelopment.io/">Metadevelopment</a>.<br>
-      This is <a href="{{ site.baseurl }}/articles">my blog</a> about tech, science, and life.
+      I'm <a href="https://ua.linkedin.com/in/siriniok" target="_blank">Vlad</a>, an entrepreneur, product engineer, and aspiring AI researcher from Kharkiv, Ukraine. Ex-CPO at <a href="https://metadevelopment.io/" target="_blank">Metadevelopment</a>. Trying hard to build some new things. This is <a href="{{ site.baseurl }}/articles">my blog</a> about <b>tech, science,</b> and<b> life.</b>
     </p>
     <p>
       You can follow
@@ -18,7 +17,7 @@
       and view my
       <a href="https://github.com/siriniok" target="_blank">Github profile</a>,
       or
-      <a href="mailto:{{site.email}}" target="_blank">drop me a line</a> 💌.
+      <a href="mailto:{{site.email}}" target="_blank">drop me a line</a> 💌 for a chat or quick call.
     </p>
   </div>
 </section>
