--- a/_includes/global-footer.html
+++ b/_includes/global-footer.html
@@ -9,6 +9,6 @@
     Subscribe via <a href="{{ "/feed.xml" | prepend: site.baseurl | prepend: site.url }}"  rel="alternate" type="application/rss+xml" title="{{ site.title }}" target="_blank">RSS</a>
   </p>
   <p>
-    &copy; 2016-2019 <a href="{{ site.baseurl }}">Vladyslav Siriniok</a>
+    &copy; 2016-{{ 'now' | date: "%Y" }} <a href="{{ site.baseurl }}">Vladyslav Siriniok</a>
   </p>
 </footer>
