--- a/_sass/blog/_base.scss
+++ b/_sass/blog/_base.scss
@@ -46,6 +46,13 @@ sup {
   @include sassline($fontsize: alpha, $font: $headingtype, $lineheight: 3.5, $below: 1, $breakpoint: 4);
 }
 
+.typeset hr {
+  margin: 0 auto;
+  padding-bottom: 2rem;
+  padding-top: 2rem;
+  width: 70%;
+}
+
 img {
   height: auto;
   vertical-align: middle;
@@ -71,4 +78,12 @@ code.highlighter-rouge{
   background-color: $white;
 
   @include baseline($fontsize: epsilon, $font: $bodytype, $lineheight: 1.5, $below: 1.5, $breakpoint: all);
+}
+
+details > summary {
+  font-weight: bold;
+}
+
+.twitter-tweet {
+  margin: 0 auto;
 }
