--- a/_includes/comments.html
+++ b/_includes/comments.html
@@ -1,20 +1,22 @@
-<div id="disqus_thread"></div>
+{% if page.comments %}
+  <div id="disqus_thread"></div>
 
-<script>
-  var disqus_config = function () {
-    this.page.url = "{{ site.url }}";
-    this.page.identifier = "{{ page.url }}";
-  };
+  <script>
+    var disqus_config = function () {
+      this.page.url = "{{ site.url }}";
+      this.page.identifier = "{{ page.url }}";
+    };
 
-  (function() { // DON'T EDIT BELOW THIS LINE
-    var d = document, s = d.createElement('script');
-    s.src = '//siriniok.disqus.com/embed.js';
-    s.setAttribute('data-timestamp', +new Date());
-    (d.head || d.body).appendChild(s);
-  })();
-</script>
+    (function() { // DON'T EDIT BELOW THIS LINE
+      var d = document, s = d.createElement('script');
+      s.src = '//siriniok.disqus.com/embed.js';
+      s.setAttribute('data-timestamp', +new Date());
+      (d.head || d.body).appendChild(s);
+    })();
+  </script>
 
-<noscript>
-  Please enable JavaScript to view the
-  <a href="https://disqus.com/?ref_noscript">comments powered by Disqus.</a>
-</noscript>
+  <noscript>
+    Please enable JavaScript to view the
+    <a href="https://disqus.com/?ref_noscript">comments powered by Disqus.</a>
+  </noscript>
+{% endif %}
